Replace treeviz.min.js with treeviz.js

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <!-- Önce D3.js -->
     <script src="js/d3.v5.min.js"></script>
     <!-- Sonra Treeviz -->
-    <script src="js/treeviz.min.js"></script>
+    <script src="js/treeviz.js"></script>
     
     <!-- YEDEK: Eğer yerel dosyalar yoksa CDN'den yükle -->
     <script>
